--- a/clearly.service
+++ b/clearly.service
@@ -8,9 +8,8 @@ Wants=network.target
 Type=simple
 User=root
 Group=root
-ExecStartPre=/bin/mkdir -p /tmp/clearly
 ExecStartPre=/bin/mkdir -p /var/log
-ExecStart=/usr/local/bin/clearly daemon
+ExecStart=clearly daemon
 ExecReload=/bin/kill -HUP $MAINPID
 KillMode=mixed
 KillSignal=SIGTERM
@@ -24,7 +23,7 @@ SyslogIdentifier=clearly
 # Security settings
 # ProtectSystem=strict
 # ProtectHome=true
-# ReadWritePaths=/tmp/clearly /var/log
+# ReadWritePaths=/var/log /run/clearly
 # ProtectKernelTunables=true
 # ProtectKernelModules=true
 # ProtectControlGroups=true
