Adjust installation for publish.yaml

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -31,8 +31,12 @@ jobs:
             libcap-devel \
             fuse3-devel \
             json-c-devel \
+            python3 \
             python3-devel \
             python3-lark-parser \
+            python3-sphinx \
+            python3-sphinx_rtd_theme \
+            python3-libsass \
             python3-requests \
             python3-jinja2 \
             python3-wheel \
