--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -49,7 +49,7 @@ jobs:
       - name: Build RPM
         run: |
           # Copy source to container
-          docker cp . fedora-builder:/tmp/clearly
+          docker cp . fedora-builder:/root/clearly
           
           # Get version from tag or use HEAD
           if [[ "${{ github.ref }}" == refs/tags/v* ]]; then
@@ -64,7 +64,8 @@ jobs:
           docker exec fedora-builder bash -c "
             set -x # print commands
             set -e # exit on error
-            cd /tmp/clearly
+            git config --global --add safe.directory /root/clearly
+            cd /root/clearly
             ./autogen.sh
             ./configure
             make dist
@@ -77,8 +78,8 @@ jobs:
           "
           
           # Copy RPMs back
-          docker cp fedora-builder:/tmp/clearly/rpmbuild/RPMS ./rpms
-          docker cp fedora-builder:/tmp/clearly/rpmbuild/SRPMS ./srpms
+          docker cp fedora-builder:/root/clearly/rpmbuild/RPMS ./rpms
+          docker cp fedora-builder:/root/clearly/rpmbuild/SRPMS ./srpms
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
