Remove / change unused imports / makefile settings

--- a/.gitignore
+++ b/.gitignore
@@ -4,17 +4,15 @@ a.out
 /bin/clearly
 /cmd/check
 /cmd/run
-/cmd/link
+/cmd/use
 /cmd/list
 /cmd/logs
 /cmd/stop
 /cmd/image
 /cmd/daemon
-/cmd/deploy
 /cmd/version
 /cmd/image.c
 /cmd/daemon.c
-/cmd/deploy.c
 /lib/*.c
 /lib/*.so
 /examples/copy/dirCa/symlink-to-dirCb
