Fix misc.c definition

--- a/cmd/Makefile.am
+++ b/cmd/Makefile.am
@@ -14,7 +14,7 @@ endif
 run_CFLAGS = $(PTHREAD_CFLAGS) -DLIBEXECDIR="\"$(pkglibexecdir)\"" @LIBNL_CFLAGS@ @JSONC_CFLAGS@
 run_LDADD = $(CLEARLY_RUN_LIBS) @LIBMNL_LIBS@ @LIBNFTNL_LIBS@ @LIBNL_LIBS@ @JSONC_LIBS@
 
-check_SOURCES = check.c misc.h misc.
+check_SOURCES = check.c misc.h misc.c
 
 use_SOURCES = use.c net.h net.c misc.h misc.c
 use_CFLAGS = @LIBNL_CFLAGS@
