Adjust EXTRA_DIST variable

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -19,10 +19,9 @@
 .NOTPARALLEL:
 
 EXTRA_DIST = \
-_loc.rst \
 best_practices.rst \
 bugs.rst \
-charliecloud.rst \
+clearly.rst \
 check.rst \
 convert.rst \
 fromhost.rst \
