Fix file naming in Makefile

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -22,12 +22,12 @@ EXTRA_DIST = \
 best_practices.rst \
 bugs.rst \
 clearly.rst \
-check.rst \
-convert.rst \
-fromhost.rst \
-image.rst \
-run.rst \
-test.rst \
+clearly-check.rst \
+clearly-convert.rst \
+clearly-fromhost.rst \
+clearly-image.rst \
+clearly-run.rst \
+clearly-test.rst \
 conf.py \
 dev.rst \
 faq.rst \
