--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -70,26 +70,27 @@ jobs:
             ./configure
             make dist
             
-            # Find the generated tarball
+            # Find the generated tarball. Use \$() so this command runs inside the container.
             ORIGINAL_TARBALL=\$(ls clearly-*.tar.gz)
             
-            # Unpack it
-            tar -xzf \$ORIGINAL_TARBALL
+            # Unpack it. Use \"\$VAR\" to refer to the variable set inside the container.
+            tar -xzf \"\$ORIGINAL_TARBALL\"
             
-            # Find the unpacked directory name
+            # Find the unpacked directory name.
             ORIGINAL_DIR=\$(ls -d clearly-*/)
             
-            # Rename the directory to match the version we will use in the .spec file
-            mv \"\$ORIGINAL_DIR\" \"clearly-\$VERSION\"
+            # Rename the directory. Use \"\$VAR\" for the container variable and \"$VAR\" for the
+            # runner's variable. $VERSION is correctly expanded by the outer shell now.
+            mv \"\$ORIGINAL_DIR\" \"clearly-$VERSION\"
             
-            # Repack the tarball with the correct internal directory structure
-            tar -czf \"clearly-\$VERSION.tar.gz\" \"clearly-\$VERSION\"
-            
-            # Place the tarball where rpmbuild can find it
+            # Repack the tarball with the correct internal directory.
+            tar -czf \"clearly-$VERSION.tar.gz\" \"clearly-$VERSION\"
+
+            # Place the new, corrected tarball where rpmbuild can find it.
             mkdir -p /root/rpmbuild/SOURCES
-            mv clearly-*.tar.gz /root/rpmbuild/SOURCES/clearly-$VERSION.tar.gz
+            mv \"clearly-$VERSION.tar.gz\" /root/rpmbuild/SOURCES/
             
-            # Create spec file with version
+            # Create spec file with version. $VERSION and $RELEASE are expanded by the outer shell.
             sed 's/@VERSION@/$VERSION/g; s/@RELEASE@/$RELEASE/g' packaging/fedora/clearly.spec > clearly.spec
             
             # Build RPM
