--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -36,6 +36,7 @@ jobs:
             json-c-devel \
             python3 \
             python3-devel \
+            python3-setuptools \
             python3-lark-parser \
             python3-sphinx \
             python3-sphinx_rtd_theme \
