Update GitHub Actions workflow to include permissions for content access and define environment for GitHub Pages deployment

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -144,6 +144,11 @@ jobs:
     permissions:
         pages: write
         id-token: write
+        contents: read
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     
     steps:
       - name: Checkout code
