--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -167,6 +167,7 @@ jobs:
             libtool \
             pkgconfig \
             gcc \
+            python3 \
             python3-sphinx \
             python3-sphinx_rtd_theme \
             python3-libsass \
