Update GitHub Actions workflow to enable HTML documentation generation during the build process

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -210,7 +210,7 @@ jobs:
             ./autogen.sh
 
             # Configure the build system.
-            ./configure
+            ./configure --enable-html
 
             # Build documentation.
             make -C doc html
