--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  rpm:
-    name: Publish RPMs
+  publish:
+    name: Publish
     runs-on: ubuntu-latest
 
     permissions:
