--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -124,6 +124,8 @@ jobs:
             
             # Build the binary and source RPMs.
             rpmbuild -ba clearly.spec
+
+            ls -la /root/rpmbuild/
           "
           
           docker cp fedora-builder:/root/rpmbuild/RPMS ./rpms
