Refactor publish workflow to build all targets instead of just documentation

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -97,8 +97,8 @@ jobs:
             # Build the distribution tarball.
             make dist
             
-            # Build the documentation.
-            make -C doc html
+            # Build all the targets.
+            make
             
             # Find the generated tarball.
             ORIGINAL_TARBALL=\$(ls clearly-*.tar.gz)
