Enable CRB repository for Rocky Linux in publish workflow and adjust container setup sequence

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -20,11 +20,17 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Enable CRB repository
+        if: matrix.os == 'rockylinux:9'
+        run: |
+          docker exec builder dnf config-manager --set-enabled crb
+          docker exec builder dnf install -y 'dnf-command(config-manager)'
+          docker exec builder dnf install -y epel-release
+
       - name: Set up ${{ matrix.os }} container
         run: |
           docker run -d --name builder ${{ matrix.os }} bash -c "tail -f /dev/null"
-          docker exec builder dnf install -y 'dnf-command(config-manager)'
-          docker exec builder dnf install -y epel-release
+          
           docker exec builder dnf install -y \
             autoconf \
             automake \
