Fix indentation in publish workflow to ensure proper execution of environment variable setup for OS targets.

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -15,7 +15,7 @@ jobs:
         os: [fedora:40, rockylinux:9]
     
     steps:
-        run: echo "MATRIX_OS=${VALUE//:/-}" >> $GITHUB_ENV
+      - run: echo "MATRIX_OS=${VALUE//:/-}" >> $GITHUB_ENV
         env:
           VALUE: ${{ matrix.os }}
 
