--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -171,6 +171,10 @@ jobs:
         contents: read
 
     steps:
+      - run: echo "MATRIX_OS=${VALUE//:/-}" >> $GITHUB_ENV
+        env:
+          VALUE: ${{ matrix.os }}
+
       - name: Download RPM Artifact
         uses: actions/download-artifact@v4
         with:
