Update condition for HTML artifact upload in publish workflow to target Fedora 40 specifically

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -152,7 +152,7 @@ jobs:
 
       - name: Upload HTML Artifact
         uses: actions/upload-artifact@v4
-        if: matrix.os == matrix.os[0]
+        if: matrix.os == 'fedora:40'
         with:
           name: html
           path: ./html
